# hands-on-llm-demo-macos

./: .gitignore  README.md  ch01.py  ch02.py  ch03.py  ch04.py  download_model.py  main.py  pyproject.toml
note/: ch01.md  ch02.md  ch03.md  ch04.md
result/: ch01.txt  ch02.txt  ch03.txt  ch04.txt
test/: test_ch04_part2.py  test_flan_t5_fix.py
