[project]
name = "hands-on-llm-demo-macos"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.13" # Python 3.13 is not supported yet by some dependencies liek gensim.
dependencies = [
    "accelerate>=0.27.2",
    "datasets>=4.2.0",
    "gensim>=4.3.2",
    "openai>=2.5.0",
    "pandas>=2.3.3",
    "protobuf>=6.32.1",
    "scikit-learn>=1.5.0",
    "scipy>=1.10.1",
    "sentence-transformers>=3.0.1",
    "tiktoken>=0.12.0",
    "transformers>=4.40.1",
]
